--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 }
 
 :root {
-    font-size: 16px;
+    font-size: 12px;
 }
 
 /* Style the body/html if needed */
@@ -33,8 +33,8 @@ main {
     grid-template-rows: repeat(1, minmax(auto, auto));
     background-color: #659f8f;
     padding: 5rem;
-    gap: 5rem;
-    width: 100%;
+    gap: 15rem;
+    position: relative;
 }
 
 /* Specific alignment using a wrapper for the grid */
@@ -44,15 +44,24 @@ main {
     flex-direction: row;
     justify-content: center;
     background-color: #659f8f;
+    border-radius: 10px;
+    padding: 10rem;
 }
 
 /* Align the content of the divs and the nested elements */
 .footer-grid > div {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 2rem;
 }
 
+.signup-form-container {
+    padding-right: 5rem;
+}
+
+.quick-links-container {
+    padding-left: 5rem;
+}
 
 .footer-grid > div nav {
     display: flex;
@@ -60,6 +69,41 @@ main {
     gap: 0.5rem;
 }
 
+form input,
+form button {
+    font-size: 1rem; 
+    padding: 15px; 
+    border-radius: 10px;
+    border: 0.1rem solid black;
+}
+
+form button {
+    background-color: #d66c46;
+    color: white;
+}
+
+/* Pseudo elements CodeSpace and orange line under the grid */
+.footer-grid::after {
+    content: "";
+    width: 100%;
+    height: 0.2rem;
+    background-color: #d66c46;
+    display: block;
+    position: absolute;
+    bottom: 0;
+    left: 5rem;
+}
+
+/* Pseudo element CodeSpace after the end line */
+.footer-grid::before {
+    content: "CODESPACE";
+    font-size: 2rem;
+    display: block;
+    position: absolute;
+    bottom: 0;
+    left: 5rem;
+    bottom: -5rem;
+}
 /* Alignment of Subscribe section -  */
 
 
@@ -76,4 +120,5 @@ a {
     font-size: inherit;       
     font-family: inherit;     
     font-weight: inherit; 
+    align-self: flex-start;
 }
