--- a/styles.css
+++ b/styles.css
@@ -75,6 +75,10 @@ form button {
     padding: 15px; 
     border-radius: 10px;
     border: 0.1rem solid black;
+    box-shadow: 
+    2px 2px 5px rgba(0, 0, 0, 0.3), /* Soft shadow for depth */
+    -1px -1px 2px rgba(255, 255, 255, 0.4); /* Light top-left glow */
+    margin: 0.5rem;
 }
 
 form button {
